--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: My website
+title: Analyse Impresso
 
 # Your name to show in the footer
-author: Some Person
+author: Edouard, Melline, Selma, Ameer, Loïc
 
 ###############################################
 # --- List of links in the navigation bar --- #
